<resources>
    <string name="app_name">TTool</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="no_account">No Account?</string>
    <string name="user_login">User login</string>
    <string name="user_registration">User registration</string>
    <string name="action_exit">Exit</string>
    <string name="user_name">User Name</string>
    <string name="main_msg">Main Message</string>
    <string name="android_version">Android Version:</string>
    <string name="android_api">Android API:</string>
    <string name="cpu_trim">CPU Trim</string>
    <string name="optimize_phone">Optimize the performance of your mobile phone</string>
    <string name="save_password">Save Password</string>
    <string name="app_manage">App Manage</string>
    <string name="app_manage_msg">Manage Your Application</string>
    <string name="reboot">Reboot</string>
    <string name="reboot_msg">Senior Reboot</string>
    <string name="search_input_hint">PlaceHolder</string>
    <string name="search">Search</string>
    <string name="testacc">admin</string>
    <string name="testword">ttrp</string>
</resources>
