<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ttrpstudio.ttool.Main"
    tools:showIn="@layout/activity_main">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:cardCornerRadius="4dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_weight="1.0">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/user_login"
        android:gravity="center"
        android:textSize="14sp"
        android:textStyle="bold"/>

        <Button
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/ic_mine"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp">

        <EditText
            android:text="@string/testacc"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:ems="10"
            android:hint="@string/account"
            android:id="@+id/act_main_et_account"
            android:textSize="12sp"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp">

        <EditText
            android:text="@string/testword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:ems="10"
            android:hint="@string/password"
            android:id="@+id/act_main_et_password"
            android:textSize="12sp"
            android:password="true"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

        <com.dx.dxloadingbutton.lib.LoadingButton
            android:id="@+id/btn_login"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lb_resetAfterFailed="true"
            app:lb_btnColor="#9F9F9F"
            app:lb_btnText="@string/login" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/act_main_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_password"/>

            <TextView
                android:id="@+id/tv_noacc"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_account"/>

        </LinearLayout>

    </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
