<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_msg"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:paddingTop="10dp"
        app:cardBackgroundColor="#FFCC9866"
        app:cardCornerRadius="4dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textColor="#FFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_msg"
                android:textStyle="bold"
                android:textSize="26dp"/>

            <TextView
                android:id="@+id/tv_android_ver"
                android:textColor="#60FFFFFF"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_version"/>

            <TextView
                android:id="@+id/tv_android_api"
                android:textColor="#60FFFFFF"
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_api"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>